# FIX NY Times Block BUG;
# CRX Atualizado


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.2.0 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[11/08/2021]
# FIX Request Cache Mock - Erro https 429 - Many Requests;
# Adicionado Jornal O Popular [CACHE MOCK] - versão Inicial;
# Adicionado Jornal Diário de Santa Maria - versão Inicial;
# Add jQuery min;
# CRX Atualizado;

[29/08/2021]
# Ajuste API Cache Mock;
# FIX BUG API Cache Mock Requests HTTP e HTTPS;
# FIX BUG Estadão New Paywall;
# Brainly Removido;

[31/08/2021]
# Criação API Jornal O Tempo Minas Gerais;
# Adicionado Jornal O Tempo Minas Gerais;
# Criação API Jornal O Tempo Minas Gerais;
# Adc SweetAlert em modifyDIARIOSM() CRX;
# CRX Atualizado;

[02/09/2021]
# FIX BUG El País New Paywall;
# Add bloqueio paywall por negação de requisição - Folha de SP;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.2.1 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[25/09/2021]
# Refatoração API Cache Mock usando Guzzle;
# Add suporte Log de Erro API Cache Mock;

[02/10/2021]
# Refatoração API Brainly usando Guzzle;
# Adicionado Brainly;

[10/10/2021]
# Atualização Bypass Responde Aí;
# Add suporte Log Report API;

[14/10/2021]
# FIX BUG botão duplicado Resolução Livro Responde Aí;
# Atualização Bypass Revista Exame;
# Raftoração API Responde Aí usando Guzzle;
# Adicionado Exame Invest;
# Adicionado Revista Glamour;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.2.2 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[25/10/2021]
# Adicionado De Grão em Grão [FOLHA SP];
# Removido swalLog feature;

[30/10/2021]
# Otimização API Cache Mock;
# Valor Economico Removido;
# O Popular Removido;

[04/11/2021]
# Brainly Removido;

[11/11/2021]
# Ajuste layout snackBar Mensagens;
# Adicionado Jornal do Comercio - PE;

[13/11/2021]
# Manutenção API Cache Mock;
# FIXED Valor Economico;
# FIXED O Popular;

[17/11/2021]
# Ajustes finais na nova API de CacheMock;
# Ajuste de performance em O Popular e Valor Econômico;
# FIX BUG Notificação Atualização em https://possoler.tech;