@@ -833,6 +833,11 @@ function restoreImgs()
 
 function modifyDIARIOSM()
 {
+    //ADD JQUERY JS
+    let jqueryJS = document.createElement('script');
+    jqueryJS.setAttribute('src', 'https://code.jquery.com/jquery-3.6.0.min.js');
+    document.body.appendChild(jqueryJS);
+
     let r = setInterval(()=>{
         if(verificaElemento('.row-bloqueio') && typeof($) == 'function' && findPaywallText()){
             clearInterval(r);
@@ -2365,12 +2370,13 @@ function removeBlur()
 {
     let blurElements = document.querySelectorAll(".blur");
 
-    for (let i=0; i<blurElements.length; i++){
-        blurElements[i].classList.remove("blur");
-        blurElements[i].style.filter = 'none';
+    if(blurElements.length>0){
+        for (let i=0; i<blurElements.length; i++){
+            blurElements[i].classList.remove("blur");
+            blurElements[i].style.filter = 'none';
+        }
+        incrementaConteudoAPI();
     }
-
-    if(blurElements.length>0) incrementaConteudoAPI();
 }
 
 
@@ -2479,11 +2485,15 @@ function unlockPaidContent()
 
 function metodoAlternativo()
 {
-    expandContent();
-    removeExpandButtons();
-    removeShowCompleteSolutionButtons();
-    removeAllBlurFilter();
-    incrementaConteudoAPI();
+    try{
+        expandContent();
+        removeExpandButtons();
+        removeShowCompleteSolutionButtons();
+        removeAllBlurFilter();
+        incrementaConteudoAPI();
+    }catch(e){
+        console.log(`ERRO DESBLOQUEIO RESP AI => ${e.toString()}`);
+    }
 }
 
 function expandContent()
@@ -2524,10 +2534,21 @@ function removeShowCompleteSolutionButtons()
 
 function removeAllBlurFilter()
 {
-    let divs = document.querySelectorAll('div');
+    //TIRA BLUR TEORIA E EXERCICIOS
+    if(verificaElemento('body')){
+        let r = setInterval(()=>{
+            if(verificaElemento('.paywall-content')){
+                clearInterval(r);
+                document.body.innerHTML += '<style>.paywall-content{filter: unset !important;}</style>';
+            }
+        },800);
 
-    for(let i=0; i<divs.length; i++){
-        divs[i].style.filter = 'unset';
+        let u = setInterval(()=>{
+            if(verificaElemento("#exercicios-resolvidos")){
+                clearInterval(u);
+                document.body.innerHTML += '<style>#exercicios-resolvidos div{filter: unset !important;}</style>';
+            }
+        },800);
     }
 }
 
@@ -2917,11 +2938,6 @@ function importCDNSnackBar()
             let sweetAlertJS = document.createElement('script');
             sweetAlertJS.setAttribute('src', 'https://cdn.jsdelivr.net/npm/sweetalert2@10');
             document.body.appendChild(sweetAlertJS);
-
-            //ADD JQUERY JS
-            let jqueryJS = document.createElement('script');
-            jqueryJS.setAttribute('src', 'https://code.jquery.com/jquery-3.6.0.min.js');
-            document.body.appendChild(jqueryJS);
         }
     },800);
 }
@@ -3273,3 +3289,11 @@ function blockPaywallRequest(urlBlock)
         }
     },800);
 }
+
+/*
+=> DETECTA MUDANÇA NA ARVORE DE ELEMENTOS DA DOM
+
+document.addEventListener("DOMSubtreeModified", ()=>{
+});
+
+ */
